Fix deployment issues and add error handling

--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,15 @@ services:
     name: bls-exportpro-backend
     env: node
     plan: starter
-    buildCommand: cd bls-exportpro/backend && npm install && npm run build
-    startCommand: cd bls-exportpro/backend && npm run prod:start
+    buildCommand: |
+      cd bls-exportpro/backend
+      npm install
+      npm run prod:build
+    startCommand: |
+      cd bls-exportpro/backend
+      chmod -R 777 uploads
+      chmod -R 777 data
+      npm run prod:start
     envVars:
       - key: NODE_ENV
         value: production
