--- a/bls-exportpro/backend/package.json
+++ b/bls-exportpro/backend/package.json
@@ -10,8 +10,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "ts-node -r tsconfig-paths/register src/scripts/seed-sqlite.ts",
     "postinstall": "npm run build",
-    "prod:start": "NODE_ENV=production node dist/index.js",
-    "prod:build": "npm install --production && npm run build"
+    "prod:start": "node dist/index.js",
+    "prod:build": "npm install && npm run build && npm run create-dirs",
+    "create-dirs": "node dist/scripts/create-dirs.js"
   },
   "keywords": [],
   "author": "",
