Update TypeScript configuration and add Vercel build script; disable strict mode and enable output generation

--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,13 @@
     },
     {
       "src": "bls-exportpro/backend/vercel.ts",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": [
+          "bls-exportpro/shared/**",
+          "bls-exportpro/backend/data/**"
+        ]
+      }
     }
   ],
   "routes": [
