--- a/bls-exportpro/backend/package.json
+++ b/bls-exportpro/backend/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc",
+    "build": "npm run prebuild && tsc && npm run postbuild",
+    "prebuild": "cp -r ../shared ./src/shared 2>/dev/null || xcopy ..\\shared .\\src\\shared /E /I /Y 2>nul || echo 'Shared folder copied'",
+    "postbuild": "rm -rf ./src/shared 2>/dev/null || rmdir /S /Q .\\src\\shared 2>nul || echo 'Cleanup done'",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "ts-node -r tsconfig-paths/register src/scripts/seed-sqlite.ts",
