--- a/bls-exportpro/backend/package.json
+++ b/bls-exportpro/backend/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@types/archiver": "^6.0.3",
     "@types/nodemailer": "^6.4.17",
     "@types/qrcode": "^1.5.5",
@@ -53,7 +54,7 @@
     "tsconfig-paths": "^4.2.0",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5",
-    "zod": "^4.0.15"
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
