--- a/bls-exportpro/backend/package.json
+++ b/bls-exportpro/backend/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "npm run prebuild && tsc && npm run postbuild",
-    "prebuild": "cp -r ../shared ./src/shared 2>/dev/null || xcopy ..\\shared .\\src\\shared /E /I /Y 2>nul || echo 'Shared folder copied'",
-    "postbuild": "rm -rf ./src/shared 2>/dev/null || rmdir /S /Q .\\src\\shared 2>nul || echo 'Cleanup done'",
+    "build": "tsc",
+    "prebuild": "echo 'Using local types instead of shared'",
+    "postbuild": "echo 'Build complete'",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "ts-node -r tsconfig-paths/register src/scripts/seed-sqlite.ts",
-    "postinstall": "npm run build",
+    "postinstall": "echo 'Dependencies installed'",
     "prod:start": "node dist/index.js",
     "prod:build": "npm install && npm run build && npm run create-dirs",
     "create-dirs": "node dist/scripts/create-dirs.js"
