--- a/vercel.json
+++ b/vercel.json
@@ -25,8 +25,12 @@
       "dest": "bls-exportpro/backend/vercel.ts"
     },
     {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "bls-exportpro/frontend/dist/$1"
+      "dest": "/index.html"
     }
   ],
   "env": {
