Update Vercel routing configuration; consolidate asset handling routes

--- a/vercel.json
+++ b/vercel.json
@@ -25,8 +25,8 @@
       "dest": "bls-exportpro/backend/vercel.ts"
     },
     {
-      "src": "/assets/(.*)",
-      "dest": "/assets/$1"
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot))",
+      "dest": "/$1"
     },
     {
       "src": "/(.*)",
