Remove MIS Reports functionality and update routing; adjust Vercel configuration for improved asset handling

--- a/vercel.json
+++ b/vercel.json
@@ -14,26 +14,46 @@
       "config": {
         "includeFiles": [
           "bls-exportpro/shared/**",
-          "bls-exportpro/backend/data/**"
+          "bls-exportpro/backend/data/**",
+          "bls-exportpro/backend/src/**",
+          "bls-exportpro/backend/dist/**",
+          "bls-exportpro/backend/uploads/**",
+          "bls-exportpro/backend/package.json"
         ]
       }
     }
   ],
   "routes": [
     {
+      "src": "/health",
+      "dest": "bls-exportpro/backend/vercel.ts"
+    },
+    {
       "src": "/api/(.*)",
       "dest": "bls-exportpro/backend/vercel.ts"
     },
     {
-      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot))",
-      "dest": "/$1"
+      "src": "/uploads/(.*)",
+      "dest": "bls-exportpro/backend/vercel.ts"
+    },
+    {
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|map|json))",
+      "dest": "bls-exportpro/frontend/dist/$1",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      }
     },
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "bls-exportpro/frontend/dist/index.html"
     }
   ],
   "env": {
     "NODE_ENV": "production"
+  },
+  "functions": {
+    "bls-exportpro/backend/vercel.ts": {
+      "maxDuration": 30
+    }
   }
 }
