--- a/vercel.json
+++ b/vercel.json
@@ -39,14 +39,13 @@
     },
     {
       "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|map|json))",
-      "dest": "bls-exportpro/frontend/dist/$1",
       "headers": {
         "Cache-Control": "public, max-age=31536000, immutable"
       }
     },
     {
       "src": "/(.*)",
-      "dest": "bls-exportpro/frontend/dist/index.html"
+      "dest": "/index.html"
     }
   ],
   "env": {
