--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,22 @@
 {
   "version": 2,
   "functions": {
-    "bls-exportpro/backend/vercel.ts": {
+    "api/index.ts": {
       "maxDuration": 30
     }
   },
   "routes": [
     {
       "src": "/health",
-      "dest": "/api/bls-exportpro/backend/vercel.ts"
+      "dest": "/api"
     },
     {
       "src": "/api/(.*)",
-      "dest": "/api/bls-exportpro/backend/vercel.ts"
+      "dest": "/api"
     },
     {
       "src": "/uploads/(.*)",
-      "dest": "/api/bls-exportpro/backend/vercel.ts"
+      "dest": "/api"
     },
     {
       "src": "/(.*)",
