--- a/bls-exportpro/frontend/.env.production
+++ b/bls-exportpro/frontend/.env.production
@@ -1,3 +1,3 @@
-# Frontend Environment Variables for Render Deployment
-# This will be automatically set by Render when using render.yaml
-VITE_API_URL=/api
+# Frontend Environment Variables for Vercel Deployment
+# Empty value means use relative path /api
+VITE_API_URL=
